@@ -1137,10 +1137,12 @@ nuttx-0.3.17 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Added LPC214x SPI1 driver to interface with MMC on mcu123.com board.
 	* Added a simple SPI-based MMC/SD block driver
 	* NSH: Add LPC214x-specific support to NSH; NSH now mounts any SD cards in the slot.
+	  (Now that I have large media support so many partition and FAT fixes should follow).
+	* FAT: Fix access to unaligned 32-bit values in partion table (start sector &amp; size)
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
-buildroot-0.1.1 2008-xx-xx &lt;spudmonkey@racsa.co.cr&gt
+buildroot-0.1.1 2008-xx-xx &lt;spudmonkey@racsa.co.cr&gt;
 
 	* Support for m68k-elf and m68hc11 toolchain
 </pre></ul>
