@@ -505,4 +505,6 @@
 	* Added LPC214x SPI1 driver to interface with MMC on mcu123.com board.
 	* Added a simple SPI-based MMC/SD block driver
 	* NSH: Add LPC214x-specific support to NSH; NSH now mounts any SD cards in the slot.
+	  (Now that I have large media support so many partition and FAT fixes should follow).
+	* FAT: Fix access to unaligned 32-bit values in partion table (start sector & size)
 
